# product-iterator

./: CMakeLists.txt  README.md
include/: iterator_proxy.hpp  product_iterator.hpp  product_iterator_impl.hpp
test/: CMakeLists.txt  product_iterator.cpp
